fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,18 @@
 	scroll-behavior: smooth;
 }
 
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
 	font-family: "Poppins", sans-serif;
 	background-color: var(--bg-color);
 	color: var(--text-color);
-	/* position: relative; */
 	font-size: 1.2rem;
-	/* height: 100%;
-	min-height: 100%; */
+	height: 100%;
+	overflow: hidden;
 }
 
 a {
